src/objects/Classification__c.object
<CustomObject>
    <fields>
        <fullName>AWS_S3_Object__c</fullName>
        <label>AWS S3 Object</label>
        <referenceTo>AWS_S3_Object__c</referenceTo>
        <relationshipLabel>Classifications</relationshipLabel>
        <relationshipName>Classifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <label>Confidence</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Classification</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Classification No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>